# flashinfer-contest-playground

./: README.md  config.toml  pyproject.toml
scripts/: pack_solution.py  run_modal.py
solution/python/: kernel.py
solution/triton/: kernel.py
